# ChangeLog for media-libs/libkipi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libkipi/ChangeLog,v 1.30 2009/02/08 23:04:40 carlo Exp $

*libkipi-0.1.6-r2 (08 Feb 2009)

  08 Feb 2009; Carsten Lohrke <carlo@gentoo.org> +libkipi-0.1.6-r2.ebuild:
  Invalid aRts dependency, more ebuild cleanup.

*libkipi-0.1.6-r1 (04 Oct 2008)

  04 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  -libkipi-0.1.6.ebuild, +libkipi-0.1.6-r1.ebuild:
  Bumped libkipi to force the reinstall under /usr/kde/3.5 and to fix bug
  239282. Thanks to Jan Kundrát(jkt).

*libkipi-0.1.6 (29 Jun 2008)

  29 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
  +libkipi-0.1.6.ebuild:
  Version bump.

  27 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org> -libkipi-0.1.ebuild,
  -libkipi-0.1.1.ebuild, -libkipi-0.1.2.ebuild, -libkipi-0.1.3.ebuild,
  -libkipi-0.1.4.ebuild, libkipi-0.1.5.ebuild:
  Marked stable on amd64 as per bug 193930. Removed obsolete versions.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libkipi-0.1.5.ebuild:
  ppc. stable

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> libkipi-0.1.5.ebuild:
  Stable on sparc

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> libkipi-0.1.5.ebuild:
  alpha/ia64/x86 stable

  13 May 2007; Steve Dibb <beandog@gentoo.org> libkipi-0.1.4.ebuild:
  amd64 stable

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> libkipi-0.1.4.ebuild:
  ia64 stable

  02 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> libkipi-0.1.4.ebuild:
  Stable on sparc

*libkipi-0.1.5 (30 Dec 2006)

  30 Dec 2006; Dominik Stadler <centic@gentoo.org> libkipi-0.1.ebuild,
  libkipi-0.1.1.ebuild, libkipi-0.1.2.ebuild, libkipi-0.1.3.ebuild,
  libkipi-0.1.4.ebuild, +libkipi-0.1.5.ebuild:
  Update homepage to http://www.kipi-plugins.org/, add new version 0.1.5

  30 Dec 2006; Dominik Stadler <centic@gentoo.org> libkipi-0.1.3.ebuild,
  libkipi-0.1.4.ebuild:
  Mark 0.1.3 and 0.1.4 stable on x86
