@@ -1,7 +1,6 @@
 DIST libkipi-0.1.5.tar.bz2 602030 RMD160 4ff521f5ee4ec4a76defd32a144d5c47c00c59ed SHA1 2f7cc8b423f572b9b50c0bc3102c7b901431f606 SHA256 6634c8c17d17b18661f7418e1c45445148c9f9d017344b1b7590d0928c642110
 DIST libkipi-0.1.6.tar.bz2 556980 RMD160 433215f09a803fe15e664ac531cebe52dc29c479 SHA1 273d4592dbb366e3a009b82808816b07bea1bfe9 SHA256 6e2c14f75d7827d462c1495f02bd6592ed1f2219db04c066d4b8193ad503b228
 EBUILD libkipi-0.1.5.ebuild 545 RMD160 486728645302cdf301f8c12c4a1cd947c1f5995d SHA1 449836407dfa1ae38128180bf8a24f4ff042cc00 SHA256 acfe13a31abc4c1678bc67f5079aae31d70b83c8fdfc3ccdb171549c835a041f
-EBUILD libkipi-0.1.6-r1.ebuild 555 RMD160 3e120b85044c1b0ab76887819df2956d3411b320 SHA1 4a44b7c218f3f1b057c1a1a5ef0515556f87b986 SHA256 e8c5249b088e39a24ea4c7efe21e48ffd4b074018320ea65eb7d286db9eb8ec1
-EBUILD libkipi-0.1.6-r2.ebuild 523 RMD160 1fa287ca1d511cb70f3ec867420ca2a487986b62 SHA1 05f718f1e163ffc164aa946da74a553732d28235 SHA256 28bbaa117deada3ddd9a01620c57cf2c9877c76a2b89803ec7c850c7f0bcd776
-MISC ChangeLog 4267 RMD160 3c706532dd501100d501daac492547d2657ec0e6 SHA1 0960b52f8dd8bb6ff21e6f68b847de116829ae52 SHA256 a734f78ba480d7d496ae083a7e3b38b796b77031b1bb3a0766b87d058ffe7f8b
+EBUILD libkipi-0.1.6-r2.ebuild 521 RMD160 e4ac73e1ced04261ffca18af8018dc7eb6691bc4 SHA1 15824f29cc6a01774c5caf3ca02b5804902476b7 SHA256 6117cc4f5cae5340418424cf8cc75a8415991ecd59600d479d50d1633c1fbf92
+MISC ChangeLog 4387 RMD160 6bac7e8a47ebfe441dd53f16160e1ee499c458de SHA1 c8df72b0e290106dac1399c05cf84d33a6439110 SHA256 b6c63ce773322cf5e4dd6c24ead22f65c127e587d4047a64e15bc07901fc5451
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
