@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/libkipi/ChangeLog,v 1.30 2009/02/08 23:04:40 carlo Exp $
 
+  30 Jun 2010; Petr Morávek [Xificurk] <xificurk@gmail.com>
+  -libkipi-0.1.6-r1, libkipi-0.1.6-r2:
+  amd64/x86 stable
+
 *libkipi-0.1.6-r2 (08 Feb 2009)
 
   08 Feb 2009; Carsten Lohrke <carlo@gentoo.org> +libkipi-0.1.6-r2.ebuild:
